[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-nvidia-py-exporter"
authors = [{ name = "Michaël PAULON", email = "michael@paulon.org" }]
description = "Prometheus exporter for nvidia GPU metrics written in python"
readme = "README.md"
requires-python = ">=3.10"
keywords = []

classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.scripts]
prometheus-nvidia-py-exporter = "prometheus_nvidia_py_exporter.core:main"

[tool.setuptools]
license-files = ["LICENSE.md"]

[tool.setuptools.dynamic]
version = { attr = "prometheus_nvidia_py_exporter.VERSION" }
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.bumpversion]
current_version = "2.0.0"
message = "🔖 VERSION: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "prometheus_nvidia_py_exporter/__version__.py"
search = "VERSION = \"{current_version}\""
replace = "VERSION = \"{new_version}\""

[tool.black]
line-length = 120
