[metadata]
name = prometheus-nvidia-py-exporter
version = 0.0.2
description = Prometheus exporter for nvidia gpu
long_description = file: README.md
url = https://github.com/mpaulon/prometheus-nvidia-py-exporter
author = Michaël PAULON
author_email = michael@paulon.org
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
[options]
include_package_data = true
packages = find:
install_requires =
    prometheus_client
    pynvml
