[metadata]
name = prometheus-nvidia-py-exporter
version = 1.0.0
description = Prometheus exporter for nvidia gpu
long_description = file: README.md
url = https://github.com/mpaulon/prometheus-nvidia-py-exporter
author = Michaël PAULON
author_email = michael@paulon.org
manifest = MANIFEST.ini
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find:
scripts =
    scripts/prometheus-nvidia-py-exporter
install_requires =
    prometheus_client
    pynvml